--- a/DE4 - Adquisicion_Json_web.ipynb
+++ b/DE4 - Adquisicion_Json_web.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alúmno: Spesot Adrián"
+    "### Alúmno: Spesot Adrián\n",
+    "### Curso: Data Science"
    ]
   },
   {
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +685,7 @@
        "9    Kattie Turnpike           024-648-3804    ambrose.net          Hoeger LLC  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
