--- a/DE4 - Adquisicion_Json_web.ipynb
+++ b/DE4 - Adquisicion_Json_web.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Consigna:\n",
-    "##### 1. Escribir un código que lea un JSON desde esta esta web api\n",
+    "##### 1. Escribir un código que lea un JSON desde esta web api\n",
     "##### 2. Pasarlo a un DataFrame\n"
    ]
   },
